Migliorato la grafica